# Jarep

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileShaders.sh  conandata.yml  main.cpp
modules/: CMakeLists.txt
modules/jarep-core/: CMakeLists.txt  core.cpp  core.hpp
modules/jarep-core/Window/: IWindow.hpp  sdlwindow.cpp  sdlwindow.hpp
modules/jarep-ecs/: CMakeLists.txt  Feature-TODOs.md  World.cpp  World.hpp
modules/jarep-ecs/include/: World.hpp
modules/jarep-ecs/src/: CMakeLists.txt  Component.hpp  System.hpp  World.cpp  World.hpp  archetype.cpp  archetype.hpp  component.cpp  component.hpp  componentInstanceCollection.hpp  componentmanager.cpp  componentmanager.hpp  entity-generator.cpp  entity-generator.hpp  entity.hpp  entitygenerator.cpp  entitygenerator.hpp  entitymanager.cpp  entitymanager.hpp  signature.hpp  system.hpp  systemmanager.hpp  world.hpp
modules/jarep-ecs/tests/: CMakeLists.txt  archetypetests.cpp  componentmanagertests.cpp  entitygeneratortests.cpp  entitymanagertests.cpp  systemmanagertests.cpp  worldtests.cpp
modules/jarep-ecs/uml/: ECS.puml
modules/jarep-renderer/: CMakeLists.txt  IRenderAPI.hpp  IRenderer.hpp  JarRenderStep.cpp  JarRenderStep.hpp  JarRenderer.cpp  JarRenderer.hpp  JarepGraphics.cpp  JarepGraphics.hpp  Mesh.hpp  NativeWindowHandleProvider.hpp  Renderer.hpp  TODO.md  Vertex.hpp  y.cpp
modules/jarep-renderer/API/: CMakeLists.txt
modules/jarep-renderer/API/src/: CMakeLists.txt  NativeWindowHandleProvider.hpp
modules/jarep-renderer/API/src/IRendererAPI/: CMakeLists.txt  IRenderAPI.hpp  NativeWindowHandleProvider.hpp  stb_impl.cpp
modules/jarep-renderer/API/src/metal-api/: CMakeLists.txt  MetalBackend.cpp  MetalBackend.hpp  MetalBuffer.cpp  MetalBuffer.hpp  MetalBufferBuilder.cpp  MetalBufferBuilder.hpp  MetalCommandBuffer.cpp  MetalCommandBuffer.hpp  MetalCommandQueue.cpp  MetalCommandQueue.hpp  MetalCommandQueueBuilder.cpp  MetalCommandQueueBuilder.hpp  MetalDataTypeMaps.hpp  MetalDescriptor.cpp  MetalDescriptor.hpp  MetalDescriptorBuilder.cpp  MetalDescriptorBuilder.hpp  MetalDescriptorContent.cpp  MetalDescriptorContent.hpp  MetalDescriptorLayout.cpp  MetalDescriptorLayout.hpp  MetalDevice.cpp  MetalDevice.hpp  MetalFramebuffer.cpp  MetalFramebuffer.hpp  MetalFramebufferBuilder.cpp  MetalFramebufferBuilder.hpp  MetalImage.cpp  MetalImage.hpp  MetalImageBuffer.cpp  MetalImageBuffer.hpp  MetalImageBufferBuilder.cpp  MetalImageBufferBuilder.hpp  MetalImageBuilder.cpp  MetalImageBuilder.hpp  MetalPipeline.cpp  MetalPipeline.hpp  MetalPipelineBuilder.cpp  MetalPipelineBuilder.hpp  (+19 more)
modules/jarep-renderer/API/src/metal-api/metal/: CMakeLists.txt
modules/jarep-renderer/API/src/vulkan-api/: CMakeLists.txt  VulkanBackend.cpp  VulkanBackend.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferBuilder.cpp  VulkanBufferBuilder.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandQueue.cpp  VulkanCommandQueue.hpp  VulkanCommandQueueBuilder.cpp  VulkanCommandQueueBuilder.hpp  VulkanDataTypeMaps.hpp  VulkanDescriptor.cpp  VulkanDescriptor.hpp  VulkanDescriptorBuilder.cpp  VulkanDescriptorBuilder.hpp  VulkanDescriptorLayout.cpp  VulkanDescriptorLayout.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanFramebufferBuilder.cpp  VulkanFramebufferBuilder.hpp  VulkanFramebuffer_OLD.cpp  VulkanFramebuffer_OLD.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanGraphicsPipelineBuilder.cpp  VulkanGraphicsPipelineBuilder.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageBuffer.cpp  VulkanImageBuffer.hpp  VulkanImageBufferBuilder.cpp  VulkanImageBufferBuilder.hpp  VulkanImageBuilder.cpp  VulkanImageBuilder.hpp  (+21 more)
modules/jarep-renderer/API/tests/: CMakeLists.txt
modules/jarep-renderer/API/tests/metal-api-tests/: CMakeLists.txt  MetalCommandQueueBuilderTests.cpp
modules/jarep-renderer/JarGraphicsApi/: CMakeLists.txt  JarBackend.cpp  JarBackend.hpp
modules/jarep-renderer/JarGraphicsApi/Metal/: CMakeLists.txt  MetalBackend.cpp  MetalBackend.hpp
modules/jarep-renderer/JarGraphicsApi/Vulkan/: CMakeLists.txt  VulkanBackend.cpp  VulkanBackend.hpp
modules/jarep-renderer/JarGraphicsApi/include/: JarBackend.hpp  JarDevice.cpp  JarDevice.hpp  JarExtent2D.hpp  JarSurface.hpp  NativeWindowHandleProvider.hpp
modules/jarep-renderer/JarGraphicsApi/src/: JarBackend.cpp  JarDevice.cpp  JarDevice.hpp  JarSurface.cpp
modules/jarep-renderer/metal-api/: metalapi.cpp  metalapi.hpp  metalapi.mm  sdlsurfaceadapter.hpp  sdlsurfaceadapter.mm  triangle.metal
modules/jarep-renderer/metal-api/metal/: CMakeLists.txt  definition.cpp
modules/jarep-renderer/shaders/: triangle.frag  triangle.vert
modules/jarep-renderer/vulkan-api/: sdlsurfaceadapter.cpp  sdlsurfaceadapter.hpp  vulkanapi.cpp  vulkanapi.hpp
