cmake_minimum_required(VERSION 3.25)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SOURCE_FILES IRendererAPI/stb_impl.cpp)

add_library(JAREP_RENDERER_API INTERFACE)
add_subdirectory(IRendererAPI)
if (APPLE)
    add_subdirectory(metal-api)
    target_link_libraries(JAREP_RENDERER_API INTERFACE METAL_RENDERER_API)
else()
    add_subdirectory(vulkan-api)
    target_link_libraries(JAREP_RENDERER_API INTERFACE VULKAN_RENDERER_API)
endif ()